# BLE_Connection_PQKE

./: .gitignore  README.md
connection_pqke/: .gitignore  CMakeLists.txt  README.md  prj.conf
connection_pqke/include/: ble_service.h  debug_utils.h  opcodes.h  pqke_config.h  pqke_crypto.h  pqke_state.h  pqke_transfer.h
connection_pqke/include/mlkem512/: features.h
connection_pqke/include/mlkem768/: compat.h  randombytes.h
connection_pqke/src/: ble_service.c  debug_utils.c  main.c  pqke_crypto.c  pqke_state.c  pqke_transfer.c
connection_pqke_central/: CMakeLists.txt  README.md  prj.conf
connection_pqke_central/src/: main.c
connection_pqke_central/src/mlkem512/: fips202.c  randombytes.c
